--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor = "#34A853"
 backgroundColor = "#2C2C2C"
 secondaryBackgroundColor = "#3C3C3C"
 textColor = "#CFCFCF"
-font = "sans-serif"
+font = "sans serif"
